Bug 1230533 - Cancel speech when controlling window goes away. r=smaug

Don't allow bfcache when there is an active or queued utterance in the window.