dom/base/nsDocument.cpp
@@ -8758,6 +8758,13 @@ nsDocument::CanSavePresentation(nsIRequest *aNewRequest)
     }
   }
 
+  #ifdef MOZ_WEBSPEECH
+  nsGlobalWindow* globalWindow = static_cast<nsGlobalWindow*>(win);
+  if (globalWindow->HasActiveSpeechSynthesis()) {
+    return false;
+  }
+  #endif
+
   return true;
 }
 
